k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pricing-service/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pricing-service
            port:
              number: 12000
      - path: /user-service/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 5000
      - path: /portfolio-service/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: portfolio-service
            port:
              number: 5000
      - path: /alert-service/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: alert-service
            port:
              number: 5000
